# stm-nix-direnv-workshop

./: .gitignore  Cargo.toml  flake.nix  memory.x  openocd.gdb
.cargo/: config
src/: main.rs
