[package]
name = "stm32"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
# cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
nb = "1.0.0"
embedded-hal = "0.2.5"

[dependencies.stm32f0xx-hal]
version = "0.17.1"
features = ["stm32f031"]

[[bin]]
name = "stm32"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
